# opencog

./: CMakeLists.txt
examples/spacetime/: octomap_based_sapcetime_query.scm  (+1 more)
experiments/: CMakeLists.txt
experiments/insect-poison/: .InsectPoisonExpModule.cc.swo  .LoggerAgent.cc.swo  CMakeLists.txt  InsectPoisonExpModule.cc  InsectPoisonExpModule.h  LoggerAgent.cc  LoggerAgent.h  README.md  clean_workspace.sh  extract_af_from_aflog.py  extract_nodes_from_afjson.py  insect_sent_logger.scm  load_insect_kb.scm  node_extract.sh  poison_sent_logger.scm  sources.txt  word_rep_graph.py
experiments/insect-poison/data/kb/: adagram_sm_links.scm
experiments/insect-poison/data/log/: extract_log.py  pydump-percentage-af.data
experiments/insect-poison/data/sentecnes/: cars.sent  insecticide.sent  insects.sent  poison.sent
experiments/insect-poison/data/sentences/: cars.sent  insecticide-long.sent  insecticide.sent  insects-100.sent  insects-long.sent  insects.sent  poisons-100.sent  poisons-50.sent  poisons-long.sent  poisons.sent
experiments/insect-poison/data/words/: check_in_sew.sh  checkwords.sh  extract_from_sew.sh  find_insecticides_in_log.sh  insect_insecticide.words  insect_poison_db_from_adagram.jl  insecticide.words  insects.words  kb.scm  poison_insecticide.words  prepare_topic_pairs.sh
experiments/insect-poison/scripts/: cmds.txt  ecanplot.gnu  experiment.ini  experiments.conf  extract_items.cc  launch_exp.py  parse_csv.sh  plot_from_log.py  prepare_topic_pairs.sh  start_exp.sh
lib/: CMakeLists.txt  default_cpolicy.json  opencog.conf  rule-engine.conf
(+94 files in other folders)
